feat. css formatting, navbar and footer

--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 </head>
 <body>
 
-<header class="container">
-    <h1>Rock Adoption Center</h1>
-    <p>Your one-stop shop for finding your perfect pet rock!</p>
-</header>
+    <header class="container text-center py-5 bg-light">
+        <h1 class="display-4">Rock Adoption Center</h1>
+        <p class="lead">Your one-stop shop for finding your perfect pet rock!</p>
+    </header>
 
-<main class="container">
-    <h2>Welcome to Rock Adoption</h2>
-    <p>We are dedicated to helping rocks find loving homes. Browse our catalog or learn more about our mission!</p>
-    <nav>
-        <a href="mission.html" class="btn btn-primary">Our Mission</a>
-        <a href="catalog.html" class="btn btn-primary">Catalog</a>
-        <a href="adopt.html" class="btn btn-primary">Adoption Forum</a>
-    </nav>
-</main>
+    <main class="container text-center py-5">
+        <h2 class="display-5">Welcome to Rock Adoption</h2>
+        <p class="lead">We are dedicated to helping rocks find loving homes. Browse our catalog or learn more about our mission!</p>
+        <nav class="mt-4">
+            <a href="mission.html" class="btn btn-primary mx-2">Our Mission</a>
+            <a href="catalog.html" class="btn btn-primary mx-2">Catalog</a>
+            <a href="adopt.html" class="btn btn-primary mx-2">Adoption Forum</a>
+        </nav>
+    </main>
+    
 
 <footer class="container">
     <p>&copy; 2024 Rock Adoption Center. All rights reserved.</p>
