--- a/index.html
+++ b/index.html
@@ -4,15 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Rock Adoption</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <header class="container text-center py-5 bg-light">
-        <h1 class="display-4">Rock Adoption Center</h1>
-        <p class="lead">Your one-stop shop for finding your perfect pet rock!</p>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html">Rock Adoption</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="mission.html">Our Mission</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="catalog.html">Catalogue</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="adopt.html">Adoption Form</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    
+    <!-- Hero Section -->
+    <div class="jumbotron jumbotron-fluid text-white text-center" style="background-image: url('https://t3.ftcdn.net/jpg/02/93/71/22/360_F_293712283_EGPqlm1bxpH0ZnrngyjRBol9GnJm2ST7.jpg'); background-size: cover; background-position: center; height: 50vh;">
+        <div class="container">
+            <h1 class="display-4">Rock Adoption Center</h1>
+            <p class="lead">Your one-stop shop for finding your perfect pet rock!</p>
+        </div>
+    </div>
 
     <main class="container text-center py-5">
         <h2 class="display-5">Welcome to Rock Adoption</h2>
@@ -22,14 +48,13 @@
             <a href="catalog.html" class="btn btn-primary mx-2">Catalog</a>
             <a href="adopt.html" class="btn btn-primary mx-2">Adoption Forum</a>
         </nav>
-    </main>
-    
+    </main>    
 
-<footer class="container">
-    <p>&copy; 2024 Rock Adoption Center. All rights reserved.</p>
-</footer>
+    <footer class="bg-dark text-white text-center py-3">
+        <div class="container">
+            <p class="mb-0">&copy; 2024 Rock Adoption Center. All rights reserved.</p>
+        </div>
+    </footer>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
