Test: Header and footer moved to .css

--- a/mission.html
+++ b/mission.html
@@ -9,16 +9,37 @@
 </head>
 <body>
 
-<header class="container">
-    <h1>Rock Adoption Center</h1>
-</header>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="index.html">Rock Adoption</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mission.html">Our Mission</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="catalog.html">Catalogue</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="adopt.html">Adoption Form</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
 <main class="container">
     <h2>Our Mission</h2>
     <p>At Rock Adoption Center, we believe every rock deserves a warm, loving home. Our mission is to connect pet rocks with people who appreciate their unique qualities.</p>
 </main>
 
-<footer class="container">
+<footer>
     <p>&copy; 2024 Rock Adoption Center. All rights reserved.</p>
 </footer>
 
