--- a/index.html
+++ b/index.html
@@ -7,31 +7,34 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Rock Adoption</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="mission.html">Our Mission</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="catalog.html">Catalogue</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="adopt.html">Adoption Form</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="index.html">Rock Adoption</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mission.html">Our Mission</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="catalog.html">Catalogue</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="adopt.html">Adoption Form</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <!-- Hero Section -->
     <div class="jumbotron jumbotron-fluid text-white text-center" style="background-image: url('https://t3.ftcdn.net/jpg/02/93/71/22/360_F_293712283_EGPqlm1bxpH0ZnrngyjRBol9GnJm2ST7.jpg'); background-size: cover; background-position: center; height: 50vh;">
         <div class="container">
@@ -50,10 +53,8 @@
         </nav>
     </main>    
 
-    <footer class="bg-dark text-white text-center py-3">
-        <div class="container">
-            <p class="mb-0">&copy; 2024 Rock Adoption Center. All rights reserved.</p>
-        </div>
+    <footer>
+        <p>&copy; 2024 Rock Adoption Center. All rights reserved.</p>
     </footer>
 
 </body>
