Feature: set colums for catalog

--- a/catalog.html
+++ b/catalog.html
@@ -1,39 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalog | Rock Adoption</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Catalog | Rock Adoption</title>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">Rock Adoption</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mission.html">Our Mission</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="catalog.html">Catalogue</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="adopt.html">Adoption Form</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-<header class="container">
-    <h1>Rock Adoption Center</h1>
-</header>
-
-<main class="container">
-    <h2>Catalog of Available Rocks</h2>
-    <div class="row">
-        <div class="col-md-4">
-            <div class="card">
-                <img src="rock1.jpg" class="card-img-top" alt="Rock 1">
-                <div class="card-body">
-                    <h5 class="card-title">Rocky</h5>
-                    <p class="card-text">A smooth, loyal companion.</p>
+    <main class="container">
+        <h2>Catalog of Available Rocks</h2>
+        <div class="row">
+            <!-- Rock 1 -->
+            <div class="p-2 col-lg-3">
+                <div class="card">
+                    <img src="rock1.jpg" class="card-img-top" alt="Rocky">
+                    <div class="card-body">
+                        <h5 class="card-title">Rocky</h5>
+                        <p class="card-text">A smooth, loyal companion.</p>
+                        <a href="adopt.html" class="btn btn-primary">Adopt Rocky</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Rock 2 -->
+            <div class="p-2 col-lg-3">
+                <div class="card">
+                    <img src="rock2.jpg" class="card-img-top" alt="Pebbles">
+                    <div class="card-body">
+                        <h5 class="card-title">Pebbles</h5>
+                        <p class="card-text">A tiny but mighty friend.</p>
+                        <a href="adopt.html" class="btn btn-primary">Adopt Pebbles</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Rock 3 -->
+            <div class="p-2 col-lg-3">
+                <div class="card">
+                    <img src="rock3.jpg" class="card-img-top" alt="Boulder">
+                    <div class="card-body">
+                        <h5 class="card-title">Boulder</h5>
+                        <p class="card-text">Strong, steady, and reliable.</p>
+                        <a href="adopt.html" class="btn btn-primary">Adopt Boulder</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Rock 4 -->
+            <div class="p-2 col-lg-3">
+                <div class="card">
+                    <img src="rock3.jpg" class="card-img-top" alt="TEST">
+                    <div class="card-body">
+                        <h5 class="card-title">Boulder</h5>
+                        <p class="card-text">Strong, steady, and reliable.</p>
+                        <a href="adopt.html" class="btn btn-primary">Adopt TEST</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Rock 5 -->
+            <div class="p-2 col-lg-3">
+                <div class="card">
+                    <img src="rock3.jpg" class="card-img-top" alt="TEST">
+                    <div class="card-body">
+                        <h5 class="card-title">Boulder</h5>
+                        <p class="card-text">Strong, steady, and reliable.</p>
+                        <a href="adopt.html" class="btn btn-primary">Adopt TEST</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Rock 6 -->
+            <div class="p-2 col-lg-3">
+                <div class="card">
+                    <img src="rock3.jpg" class="card-img-top" alt="TEST">
+                    <div class="card-body">
+                        <h5 class="card-title">Boulder</h5>
+                        <p class="card-text">Strong, steady, and reliable.</p>
+                        <a href="adopt.html" class="btn btn-primary">Adopt TEST</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Rock 7 -->
+            <div class="p-2 col-lg-3">
+                <div class="card">
+                    <img src="rock3.jpg" class="card-img-top" alt="TEST">
+                    <div class="card-body">
+                        <h5 class="card-title">Boulder</h5>
+                        <p class="card-text">Strong, steady, and reliable.</p>
+                        <a href="adopt.html" class="btn btn-primary">Adopt TEST</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Rock 8 -->
+            <div class="p-2 col-lg-3">
+                <div class="card">
+                    <img src="rock3.jpg" class="card-img-top" alt="TEST">
+                    <div class="card-body">
+                        <h5 class="card-title">Boulder</h5>
+                        <p class="card-text">Strong, steady, and reliable.</p>
+                        <a href="adopt.html" class="btn btn-primary">Adopt TEST</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Rock 9 -->
+            <div class="p-2 col-lg-3">
+                <div class="card">
+                    <img src="rock3.jpg" class="card-img-top" alt="TEST">
+                    <div class="card-body">
+                        <h5 class="card-title">Boulder</h5>
+                        <p class="card-text">Strong, steady, and reliable.</p>
+                        <a href="adopt.html" class="btn btn-primary">Adopt TEST</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Add more rock cards here as needed -->
-    </div>
-</main>
+    </main>
 
-<footer class="container">
-    <p>&copy; 2024 Rock Adoption Center. All rights reserved.</p>
-</footer>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <footer class="bg-dark text-white text-center py-3">
+        <div class="container">
+            <p class="mb-0">&copy; 2024 Rock Adoption Center. All rights reserved.</p>
+        </div>
+    </footer>
 </html>
