--- a/catalog.html
+++ b/catalog.html
@@ -36,39 +36,6 @@
         </nav>
     </header>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Catalog | Rock Adoption</title>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">Rock Adoption</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="mission.html">Our Mission</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="catalog.html">Catalogue</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="adopt.html">Adoption Form</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
     <main class="container">
         <h2>Catalog of Available Rocks</h2>
         <div class="row">
@@ -179,4 +146,5 @@
             <p class="mb-0">&copy; 2024 Rock Adoption Center. All rights reserved.</p>
         </div>
     </footer>
+</body>
 </html>
