--- a/catalog.html
+++ b/catalog.html
@@ -141,10 +141,8 @@
         </div>
     </main>
 
-    <footer class="bg-dark text-white text-center py-3">
-        <div class="container">
-            <p class="mb-0">&copy; 2024 Rock Adoption Center. All rights reserved.</p>
-        </div>
+    <footer>
+        <p>&copy; 2024 Rock Adoption Center. All rights reserved.</p>
     </footer>
 </body>
 </html>
